# swish-acquisition

./: .coveragerc  .dockerignore  .mypy.ini  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: ci.yml
.github/workflows/: cd.yml  ci.yml  continuous_deployment.yml  continuous_integration.yml
swish_acquisition/: base.py  celery_app.py  celeryconfig.py  commonplayerinfo.py  constants.py  logging_config.py  models.py  probes.py  s3.py  scheme.py  scoreboardv3.py  session.py  settings.py  tasks.py  teamdetails.py
swish_acquisition/collectors/: __init__.py  base.py  boxscoresummary.py  commonplayerinfo.py  playbyplay.py  scoreboard.py  teamdetails.py
swish_acquisition/conf/: __init__.py
swish_acquisition/endpoints/: __init__.py  base.py  boxscoresummaryv3.py  commonplayerinfo.py  playbyplayv3.py  scoreboardv3.py  teamdetails.py
swish_acquisition/scheme/endpoints/: __init__.py  boxscoresummaryv3.py  commonplayerinfo.py  meta.py  playbyplayv3.py  scoreboardv3.py  teamdetails.py
tests/: utils.py
tests/data/: 0040900407.json  2022-05-29.json
tests/data/endpoints/boxscoresummaryv3/: 0040900407.json
tests/unittest/: test_boxscoresummaryv3.py  test_commonplayerinfo.py  test_logging_config.py  test_playbyplayv3.py  test_scheme.py  test_scoreboardv3.py  test_tasks.py  test_teamdetails.py
tests/unittest/collectors/: test_boxscoresummary_collector.py  test_commonplayerinfo_collector.py  test_playbyplay_collector.py  test_scoreboard_collector.py  test_teamdetails_collector.py
tests/unittest/conf/: settings_local.py  settings_with_long_keys.py  test_settings.py
tests/unittest/endpoints/: test_boxscoresummaryv3_endpoint.py  test_scoreboardv3_endpoint.py  test_teamdetails_endpoint.py
(+7 files in other folders)
