[tool.poetry]
name = "swish-acquisition"
version = "0.1.0"
description = "Asynchronous background job for collecting National Basketball Association data"
authors = ["usharerose <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
