[tool.poetry]
name = "swish-acquisition"
version = "0.1.0"
description = "Asynchronous background job for collecting National Basketball Association data"
authors = ["usharerose <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "8.19.0"
pytest = "7.4.3"
pydantic = "2.5.2"
requests = "2.31.0"

[[tool.poetry.source]]
name = "accelerated source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
