[tool.poetry]
name = "swish-acquisition"
version = "0.1.0"
description = "Asynchronous background job for collecting National Basketball Association data"
authors = ["usharerose <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "5.3.6"
minio = "7.2.3"
psycopg2-binary = "2.9.9"
pydantic = "2.5.2"
requests = "2.31.0"
SQLAlchemy = "2.0.28"
tzlocal = "5.2"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
ipython = "8.19.0"
mypy = "1.8.0"
pytest = "7.4.3"
pytest-cov = "4.1.0"

[[tool.poetry.source]]
name = "accelerated source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
